[fix]: images not rendered
[add]: page screenshot files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img class="main-logo" src="assets/imgs/logo.svg" alt="Clipboard-logo">
+        <img class="main-logo" src="./assets/imgs/logo.svg" alt="Clipboard-logo">
     </header>
 
     <main>
@@ -40,7 +40,7 @@
         </article>
 
         <article class="snippets">
-            <img src="/assets/imgs/image-computer.png" alt="image of a desktop monitor">
+            <img src="./assets/imgs/image-computer.png" alt="image of a desktop monitor">
 
             <div>
                 <h3>
@@ -69,7 +69,7 @@
             <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
         </article>
 
-        <img class="device-img" src="/assets/imgs/image-devices.png" alt="image of various devices">
+        <img class="device-img" src="./assets/imgs/image-devices.png" alt="image of various devices">
 
         <article>
             <h2>Supercharge your workflow</h2>
@@ -78,28 +78,28 @@
 
         <article class="workflow">
             <div>
-                <img src="/assets/imgs/icon-blacklist.svg" alt="list icon">
+                <img src="./assets/imgs/icon-blacklist.svg" alt="list icon">
                 <h4>Create Blacklists</h4>
                 <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
             </div>
             <div>
-                <img src="/assets/imgs/icon-text.svg" alt="edit-text icon">
+                <img src="./assets/imgs/icon-text.svg" alt="edit-text icon">
                 <h4>Plain text snippets</h4>
                 <p>Remove unwanted formatting from copied text for a consistent look.</p>
             </div>
             <div>
-                <img src="/assets/imgs/icon-preview.svg" alt="preview icon">
+                <img src="./assets/imgs/icon-preview.svg" alt="preview icon">
                 <h4>Sneak preview</h4>
                 <p>Quick preview of all snippets on your Clipboard for easy access.</p>
             </div>
         </article>
 
         <article class="logo-grp">
-            <img src="/assets/imgs/logo-google.png" alt="logo of google">
-            <img src="/assets/imgs/logo-ibm.png" alt="logo of ibm">
-            <img src="/assets/imgs/logo-microsoft.png" alt="logo of microsoft">
-            <img src="/assets/imgs/logo-hp.png" alt="logo of hewlett-packard">
-            <img src="/assets/imgs/logo-vector-graphics.png" alt="logo of vector-graphics">
+            <img src="./assets/imgs/logo-google.png" alt="logo of google">
+            <img src="./assets/imgs/logo-ibm.png" alt="logo of ibm">
+            <img src="./assets/imgs/logo-microsoft.png" alt="logo of microsoft">
+            <img src="./assets/imgs/logo-hp.png" alt="logo of hewlett-packard">
+            <img src="./assets/imgs/logo-vector-graphics.png" alt="logo of vector-graphics">
         </article>
 
         <article>
@@ -120,7 +120,7 @@
 
     <footer>
         <div class="footer-items">
-            <img src="/assets/imgs/logo.svg" alt="logo svg">
+            <img src="./assets/imgs/logo.svg" alt="logo svg">
 
             <ul>
                 <li><a href="#">FAQs</a></li>
