[fix]: errors from frontend mentor report

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
             </div>
         </article>
 
-        <article class="logo-grp">
+        <div class="logo-grp article">
             <img src="./assets/imgs/logo-google.png" alt="logo of google">
             <img src="./assets/imgs/logo-ibm.png" alt="logo of ibm">
             <img src="./assets/imgs/logo-microsoft.png" alt="logo of microsoft">
             <img src="./assets/imgs/logo-hp.png" alt="logo of hewlett-packard">
             <img src="./assets/imgs/logo-vector-graphics.png" alt="logo of vector-graphics">
-        </article>
+        </div>
 
         <article>
             <h2>Clipboard for iOS and Mac OS</h2>
@@ -112,11 +112,12 @@
             </div>
         </article>
     </main>
-
-    <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://limey.io/Stanmancer" target="_blank">Stanmancer</a>.
-    </p>
+    <div class="attribution">
+        <p>
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://limey.io/Stanmancer" target="_blank">Stanmancer</a>.
+        </p>
+    </div>
 
     <footer>
         <div class="footer-items">
